Stop detail pages overflowing with long function names on Firefox

--- a/web/css/application.css
+++ b/web/css/application.css
@@ -18,6 +18,10 @@ body {
     background-color: #FFF;
 }
 
+.well {
+    overflow-x: hidden;
+}
+
 .well-tight {
     padding: 0;
 }
